--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>We are typing_</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="WeAreTyping - Competitive Typing Game">
+  <meta name="description"
+    content="Challenge your friends and improve your typing skills with WeAreTyping, a fun and competitive typing game. Create or join competitions and track your progress.">
+  <meta name="keywords"
+    content="typing game, competitive typing, typing competition, improve typing skills, online typing challenge">
+  <meta name="author" content="Tadima Monama" />
+  <title>We are typing_</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
