--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords"
     content="typing game, competitive typing, typing competition, improve typing skills, online typing challenge">
   <meta name="author" content="Tadima Monama" />
-  <title>We are typing_</title>
+  <title>WeAreTyping_</title>
 </head>
 
 <body>
